--- a/src/components/graph/Graph.css
+++ b/src/components/graph/Graph.css
@@ -35,23 +35,23 @@
   left: 15px;
 }
 
-@media screen and (min-width: 768px) {
+@media screen\0 and (min-width: 768px) {
   .svgGraph {
-    min-height: 245px;
-    min-width: 768px;
+    max-height: 245px;
+    max-width: 768px;
   }
 }
 
-@media screen and (min-width: 1024px) {
+@media screen\0 and (min-width: 1024px) {
   .svgGraph {
-    min-height: 328px;
-    min-width: 1024px
+    max-height: 328px;
+    max-width: 1024px
   }
 }
 
-@media screen and (min-width: 1440px) {
+@media screen\0 and (min-width: 1440px) {
   .svgGraph {
-    min-height: 460px;
-    min-width: 1440px
+    max-height: 460px;
+    max-width: 1440px
   }
 }
