OW-290 Tweaking the css of react-select as it’s overlapping the icons

--- a/src/static/react-select/react-select.css
+++ b/src/static/react-select/react-select.css
@@ -81,7 +81,8 @@
   position: absolute;
   right: 0;
   top: 0;
-  max-width: 100%;
+  /*max-width: 100%;*/
+  max-width: calc(100% - 25px - 17px); /* less the widths for cross and arrow */
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
