--- a/src/components/pledge-optimisation/OptimisationWidget.css
+++ b/src/components/pledge-optimisation/OptimisationWidget.css
@@ -6,6 +6,7 @@
     /*height: 345px;*/
     margin: 20px 20px 30px 20px;
     flex: 1;
+    min-height: 385px;
 }
 
 #optSetting .panelTitle {
@@ -349,6 +350,7 @@ input[type=range]:focus::-ms-fill-upper {
 
 .tabHolder {
     position: relative;
+    margin-top: 10px;
 }
 
 .tab {
@@ -365,19 +367,18 @@ input[type=range]:focus::-ms-fill-upper {
     border-bottom: 3px solid #979797;
 }
 
-.closeButton {
-    color: #585858;
-    float: right;
-    font-size: 15px;
-    padding: 0px 5px;
-    cursor: pointer;
+.objectiveParamsBar {
+    display: flex;
+    margin-top: 10px;
 }
 
-.tabbedContent {
-    display: none;
-    padding: 5px;
+.objectiveParamCont {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
 }
 
-.showContent {
-    display: block;
+.objectiveTitle {
+    composes: baseFontBold from './../../static/css-components/fonts.css';
+    margin-bottom: 5px;
 }
