--- a/src/components/pledge-optimisation/sub-components/Constraints.css
+++ b/src/components/pledge-optimisation/sub-components/Constraints.css
@@ -9,10 +9,13 @@
     padding: 5px 0;
 }
 
+.lineWithoutFlex {
+    composes: line;
+    display: inline-block;
+}
+
 .textWrap {
     color: #4A4A4A;
-    /*font-size: 13px;*/
-    /*line-height: 16px;*/
     font-size: 15px;
     line-height: 16px;
 }
@@ -55,4 +58,8 @@
 
 .checkboxWrap {
     composes: plusMinusWrap;
+}
+
+.constraintsSection {
+    margin: 12px 0;
 }
