--- a/src/components/pledge-optimisation/sub-components/Constraints.css
+++ b/src/components/pledge-optimisation/sub-components/Constraints.css
@@ -1,6 +1,7 @@
 .componentWrap {
     margin: 15px 0;
-
+    display: flex;
+    flex-direction: column;
 }
 
 .line {
@@ -18,6 +19,7 @@
     color: #4A4A4A;
     font-size: 15px;
     line-height: 16px;
+    margin-left: 10px;
 }
 
 .plusMinusWrap {
@@ -61,5 +63,11 @@
 }
 
 .constraintsSection {
-    margin: 12px 0;
+    margin: 20px 0;
+}
+
+.horizontalLine {
+    box-sizing: border-box;
+    height: 2px;
+    border: 1px solid #E6E9EC;
 }
