--- a/src/components/pledge-optimisation/sub-components/Constraints.css
+++ b/src/components/pledge-optimisation/sub-components/Constraints.css
@@ -2,6 +2,9 @@
     margin: 15px 0;
     display: flex;
     flex-direction: column;
+    color: #4A4A4A;
+    font-size: 15px;
+    line-height: 16px;
 }
 
 .line {
@@ -16,9 +19,6 @@
 }
 
 .textWrap {
-    color: #4A4A4A;
-    font-size: 15px;
-    line-height: 16px;
     margin-left: 10px;
 }
 
@@ -43,6 +43,7 @@
     border: 1px solid #EEEEEE;
 }
 
+/* To hide spinner buttons */
 .constraintsNumberBox::-webkit-inner-spin-button,
 .constraintsNumberBox::-webkit-outer-spin-button {
     -webkit-appearance: none;
