--- a/src/components/margin-agreement/MarginAgreementList.css
+++ b/src/components/margin-agreement/MarginAgreementList.css
@@ -129,7 +129,7 @@
 }
 
 .section.left{
-    flex:4;
+    flex:4 4 auto;
 }
 
 .sectionText{
@@ -236,7 +236,7 @@
 
 .section.right{
     color: #4a4a4a;
-    flex:1;
+    flex:1 1 auto;
     border-left: 1px solid #9B9B9B;
     display:flex;
     flex-direction: column;
