--- a/src/components/assets/subcomponent/AssetsPanel.css
+++ b/src/components/assets/subcomponent/AssetsPanel.css
@@ -1,7 +1,7 @@
 .assetsPanelFrame{
   background-color: #FFFFFF;
   box-shadow: 2px 3px 5px 0 rgba(0,0,0,0.5);
-  border: 1px solid #EEEEEE;
+  /*border: 1px solid #EEEEEE;*/
   border-radius: 8px;
   margin: 0% 2%;
   padding: 1%;
@@ -27,11 +27,11 @@
   justify-content: center;
   align-items: center;
 
-  position: absolute;
+  /*position: absolute;*/
+  /*bottom: 10px;*/
+  margin-top: 10px;
   height: 14px;
-  bottom: 10px;
   width: 98%;
-
 
   background-color: #2b3c4c;
   color: white;
