--- a/src/components/assets/subcomponent/deployedViews/RegionView/RegionView.css
+++ b/src/components/assets/subcomponent/deployedViews/RegionView/RegionView.css
@@ -1,8 +1,9 @@
 .regionView{
- border: 1px black dashed;
- height: calc(100% - 50px);
  display: flex;
  flex-direction: column;
+ border: 1px blue dashed;
+ height: 100%;
+ overflow-y: hidden;
 }
 
 .colLeft{
