--- a/src/components/assets/subcomponent/AssetsPanel.css
+++ b/src/components/assets/subcomponent/AssetsPanel.css
@@ -1,11 +1,9 @@
 .assetsPanelFrame{
   background-color: #FFFFFF;
   box-shadow: 2px 3px 5px 0 rgba(0,0,0,0.5);
-  /*border: 1px solid #EEEEEE;*/
   border-radius: 8px;
   margin: 0% 2%;
   padding: 1%;
-  /*height: 500px;*/
   position: relative;
 }
 
@@ -22,15 +20,15 @@
 }
 
 .panelResizeHandle{
+  position:absolute;
+  bottom: 5px;
   display: flex;
   flex-direction: row;
   justify-content: center;
   align-items: center;
 
-  /*position: absolute;*/
-  /*bottom: 10px;*/
   margin-top: 10px;
-  height: 14px;
+  height: 15px;
   width: 98%;
 
   background-color: #2b3c4c;
