--- a/src/components/assets/subcomponent/deployedViews/RegionView/RegionView.css
+++ b/src/components/assets/subcomponent/deployedViews/RegionView/RegionView.css
@@ -1,6 +1,7 @@
 .regionView{
  display: flex;
  flex-direction: column;
+ flex: 0 0 auto;
  border: 1px blue dashed;
  height: 100%;
  overflow-y: hidden;
