--- a/src/components/assets/subcomponent/AssetsPanel.css
+++ b/src/components/assets/subcomponent/AssetsPanel.css
@@ -8,6 +8,20 @@
   display: flex;
   flex-direction: column;
   flex: 1 0 auto;
+
+  height: 518px;
+}
+.assetsPanelFrameExpanded{
+  background-color: #FFFFFF;
+  box-shadow: 2px 3px 5px 0 rgba(0,0,0,0.5);
+  border-radius: 8px;
+  margin: 0% 2%;
+  padding: 1%;
+
+  display: flex;
+  flex-direction: column;
+  flex: 0 0 auto;
+
 }
 
 .assetsPanelTitle{
@@ -28,6 +42,7 @@
   flex-direction: row;
   justify-content: center;
   align-items: center;
+  flex: 1 0 auto;
 
   margin-top: 10px;
   height: 15px;
