Readied CSS for assetsPanel to toggle sideway expansion

--- a/src/components/assets/Assets.css
+++ b/src/components/assets/Assets.css
@@ -1,8 +1,20 @@
 .assetsComponent{
     display: flex;
+    flex-direction: row;
     padding: 2% 1%;
 }
 
 .assetsPanels{
-    flex: 1;
+ flex: 1 0 0  ;
+}
+
+.assetsPanelDeployed{
+ flex: 2 0 auto  ;
+  /*flex: 2 0 68%  ;*/
+  /*flex: 2 0 0  ;*/
+}
+.assetsPanelHome{
+ flex: 1 0 auto  ;
+  /*flex: 1 0 28%  ;*/
+  /*flex: 1 0 0  ;*/
 }
