--- a/src/components/assets/subcomponent/deployedViews/tableUI/tableUI.css
+++ b/src/components/assets/subcomponent/deployedViews/tableUI/tableUI.css
@@ -30,6 +30,9 @@
  justify-content: center;
 }
 /*---------------------------------------------*/
+
+/* ----- AssetsDeployedTableView ----- */
+
 .DataBlock{
  padding-bottom: 2px;
  border-bottom: 1px solid #979797;
@@ -48,4 +51,12 @@
 .VarMarginHead{
    background-color: #4e83b5;
    color: white;
+}
+
+/* ----- AssetsHomeTableView ----- */
+
+.PrincipalPledgeHead{
+ background-color: #2b3c4c;
+ color: white;
+ border-right: 1px solid white
 }
