User can now toggleAssetsDeployedPanel's view sideways and vertically, as well as selecte Initial Margin or Variation Margin

--- a/src/components/assets/Assets.css
+++ b/src/components/assets/Assets.css
@@ -9,12 +9,12 @@
 }
 
 .assetsPanelDeployed{
- flex: 2 0 auto  ;
-  /*flex: 2 0 68%  ;*/
+ /*flex: 2 0 auto  ;*/
+  flex: 2 0 68%  ;
   /*flex: 2 0 0  ;*/
 }
 .assetsPanelHome{
- flex: 1 0 auto  ;
-  /*flex: 1 0 28%  ;*/
+ /*flex: 1 0 auto  ;*/
+  flex: 1 0 28%  ;
   /*flex: 1 0 0  ;*/
 }
