--- a/src/components/assets/subcomponent/deployedViews/TableView/AssetsDeployedTableView.css
+++ b/src/components/assets/subcomponent/deployedViews/TableView/AssetsDeployedTableView.css
@@ -2,9 +2,9 @@
  /*border: 1px blue dashed;*/
  display: flex;
  flex-direction: column;
- flex: 0 0 auto;
- height: 100%;
- overflow-y: hidden;
+ flex-grow: 1;
+ height: inherit;
+ overflow: hidden;
 }
 
 /*.colLeft{
