--- a/src/components/assets/subcomponent/deployedViews/tableUI/tableUI.css
+++ b/src/components/assets/subcomponent/deployedViews/tableUI/tableUI.css
@@ -31,6 +31,11 @@
 }
 
 /* ----- AssetsDeployedTableView ----- */
+/*Navbars*/
+.RegCptyColGroupStyle{
+ border-right: 1px white solid;
+}
+
 .DataBlock{
  padding-bottom: 2px;
  border-bottom: 1px solid #979797;
@@ -40,6 +45,10 @@
  border-bottom: 1px solid #979797;
  margin-bottom: 2px;
 }
+.DataRow:hover{
+ font-size: 17px;
+ cursor: grab;
+}
 
 .RegCptyHead{
    background-color: #2b3c4c;
@@ -48,6 +57,10 @@
 }
 .VarMarginHead{
    background-color: #4e83b5;
+   color: white;
+}
+.InitMarginHead{
+   background-color: #315271;
    color: white;
 }
 
