Seperated assetPanel's table header contents from content data

--- a/src/components/copyright/copyRightStyles.css
+++ b/src/components/copyright/copyRightStyles.css
@@ -1,9 +1,9 @@
 .footer{
- position: fixed;
+ /*align-self: baseline;*/
  bottom: 0;
  width: 100%;
  border: 1px black dotted;
- margin-top: 110px;
+ margin-top: 20px;
  padding: 10px 0 10px 0;
 }
 
