--- a/src/components/graph/Graph.css
+++ b/src/components/graph/Graph.css
@@ -7,12 +7,16 @@
   text-anchor: right;
 }
 
+.graphWrapper{
+  position: relative;
+}
+
 .graphCont {
   position: relative;
   overflow-x: scroll;
   width: 100%;
   height: 480px;
-  padding: 40px 0;
+  padding: 60px 0 40px;
 }
 
 .moneyIcon {
