--- a/src/components/assets/subcomponent/deployedViews/tableUI/tableUI.css
+++ b/src/components/assets/subcomponent/deployedViews/tableUI/tableUI.css
@@ -18,16 +18,32 @@
 .Row{
  display: flex;
  flex-direction: row;
- flex: 0 0 auto;
-
+ flex: 1 0 auto;
 }
 
 .DataRowCell{
  display: flex;
  flex-direction: row;
- flex: 0 0 auto;
  align-items: center;
- justify-content: center;
+ font-size: 13px;
+ line-height: 16px;
+ padding-left: 5px;
+}
+
+.CellVisibleNoBreak {
+ white-space: nowrap;
+ text-overflow: ellipsis;
+}
+.CellVisible {
+ text-overflow: visible;
+ overflow-wrap: normal;
+ word-break: keep-all;
+}
+
+.CellEllipsis {
+ white-space: nowrap;
+ overflow: hidden;
+ text-overflow: ellipsis;
 }
 
 /* ----- AssetsDeployedTableView ----- */
@@ -57,7 +73,8 @@
 .RegCptyHead{
    background-color: #2b3c4c;
    color: white;
-   border-right: 1px solid white
+   border-right: 1px solid white;
+   text-indent: 3px;
 }
 .VarMarginHead{
    background-color: #4e83b5;
@@ -74,3 +91,29 @@
  color: white;
  border-right: 1px solid white
 }
+
+/* --- Tooltip Text --- */
+/*.tooltip{
+ position: relative;
+}
+.tooltip .tooltiptext {
+    visibility: hidden;
+    width: 120px;
+    background-color: black;
+    color: black;
+    text-align: center;
+    border-radius: 6px;
+    padding: 5px 0;
+
+    position: absolute;
+    z-index: 1;
+    top: 100%;
+    left: 50%;
+    margin-left: -60px;
+}
+
+.tooltip:hover .tooltiptext {
+    border: 1px solid gray;
+    visibility: visible;
+    background-color: rgba(255, 255, 255, 0.7);
+}*/
