Added static table to AssetsHomePanel; Changed font-weight for table headers back to normal

--- a/src/components/assets/subcomponent/deployedViews/tableUI/tableUI.css
+++ b/src/components/assets/subcomponent/deployedViews/tableUI/tableUI.css
@@ -79,10 +79,12 @@
 .VarMarginHead{
    background-color: #4e83b5;
    color: white;
+   font-weight: bold;
 }
 .InitMarginHead{
    background-color: #315271;
    color: white;
+   font-weight: bold;
 }
 
 /* ----- AssetsHomeTableView ----- */
