--- a/src/components/assets/subcomponent/deployedViews/tableUI/tableUI.css
+++ b/src/components/assets/subcomponent/deployedViews/tableUI/tableUI.css
@@ -27,7 +27,8 @@
  align-items: center;
  font-size: 13px;
  line-height: 16px;
- padding-left: 5px;
+ padding-left: 3px;
+ /*text-indent: 5px;*/
 }
 
 .CellVisibleNoBreak {
@@ -74,7 +75,8 @@
    background-color: #2b3c4c;
    color: white;
    border-right: 1px solid white;
-   text-indent: 3px;
+   padding: 0;
+   /*text-indent: 3px;*/
 }
 .VarMarginHead{
    background-color: #4e83b5;
