[UI] Ammended column widths on AssetPanel's sideway expanded view

--- a/src/components/assets/subcomponent/deployedViews/tableUI/tableUI.css
+++ b/src/components/assets/subcomponent/deployedViews/tableUI/tableUI.css
@@ -76,6 +76,7 @@
    color: white;
    border-right: 1px solid white;
    padding: 0;
+   font-weight: bold;
    /*text-indent: 3px;*/
 }
 .VarMarginHead{
