--- a/src/components/assets/subcomponent/deployedViews/NavBar.css
+++ b/src/components/assets/subcomponent/deployedViews/NavBar.css
@@ -9,10 +9,22 @@
  font-weight: bold;
  font-size: 15px;
 }
+.navbarHome{
+ display: flex;
+ flex-direction: row;
+ justify-content: flex-start;
+ align-items: center;
+ flex: 0 0 1;
+ margin-bottom: 10px;
+ color: #587d9e;
+ font-weight: bold;
+ font-size: 15px;
+}
 
 .tabs{
  color: #4a4a4a;
  cursor: pointer;
+ margin-right: 2em;
 }
 .tabs:hover{
  color: #587d9e;
